# RakshaQuant

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  render.yaml
.github/workflows/: trading.yml
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: AgentMemory.tsx  Header.tsx  MarketTicker.tsx  OpenPositions.tsx  PerformanceChart.tsx  RecentTrades.tsx  RiskMetrics.tsx  StatCard.tsx
frontend/src/hooks/: useDashboardData.ts
frontend/src/types/: index.ts
scripts/: check_config.py  dashboard_api.py  diagnose_risk.py  run_headless.py  run_live_trading.py  run_trading.py  run_with_dashboard.py  test_dhan_connection.py
src/: __init__.py
src/agents/: __init__.py  graph.py  market_regime.py  news_analyst.py  prediction.py  risk_compliance.py  sentiment.py  signal_validation.py  state.py  strategy_selection.py  vision_analyst.py  volume_analyst.py
src/api/: __init__.py  health.py
src/backtesting/: __init__.py  engine.py  strategies.py
src/config/: __init__.py  settings.py
src/dashboard/: __init__.py  cli.py
src/execution/: __init__.py  adapter.py  journal.py  paper_engine.py
src/market/: __init__.py  data_feed.py  indicators.py  live_data.py  manager.py  signals.py  simulated_data.py  sizing.py  stock_discovery.py  websocket_feed.py  yfinance_feed.py
src/memory/: __init__.py  analyzer.py  classifier.py  database.py  injection.py  scheduler.py
src/notifications/: __init__.py  telegram.py
src/observability/: __init__.py  tracing.py
src/utils/: __init__.py  cache.py  circuit_breaker.py  errors.py  events.py  json_utils.py  rate_limiter.py  serialization.py
tests/: __init__.py  test_agents.py  test_agents_extended.py  test_agents_extra.py  test_backtesting.py  test_coverage_boost.py  test_dashboard.py  test_execution.py  test_market.py  test_market_extended.py  test_market_extra.py  test_memory.py  test_notifications.py  test_observability.py  test_utils.py
