[project]
name = "trading-agent"
version = "0.1.0"
description = "Agentic Paper Trading System for NSE with Learning Feedback Loop & Full Observability"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Trading Agent Team" }
]
keywords = ["trading", "agents", "langgraph", "nse", "paper-trading"]

dependencies = [
    # Agent Orchestration
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-groq>=0.2.0",
    # Observability
    "langsmith>=0.1.0",
    # Broker API
    "dhanhq>=2.0.0",
    # Database
    "psycopg2-binary>=2.9.0",
    "sqlalchemy>=2.0.0",
    # Data Processing
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    # Technical Indicators
    "ta>=0.11.0",
    # Free Tier Data Sources
    "yfinance>=0.2.0",           # Yahoo Finance for NSE data
    "feedparser>=6.0.0",         # Google News RSS parsing
    "scikit-learn>=1.3.0",       # ML for price prediction
    "beautifulsoup4>=4.12.0",    # HTML parsing for news
    # Async & WebSocket
    "websockets>=12.0",
    "aiohttp>=3.9.0",
    # Utilities
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "rich>=13.0.0",  # CLI dashboard
    # Optional: Redis for caching
    "redis>=5.0.0",
    "fastapi>=0.135.3",
    "uvicorn>=0.44.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore:datetime.datetime.utcnow:DeprecationWarning:sqlalchemy",
]

[tool.mypy]
python_version = "3.11"
strict = true
